syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
package ds_relation_project_user;

message DsRelationProjectUser {

     int32 id= 1;
     int32 user_id=2 ;
     optional int32 project_id=3 ;
     optional int32  perm=4 ;
     optional string create_time=5 ;
     optional string update_time=6 ;
}


// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsRelationProjectUserService {
  rpc ListDsRelationProjectUsers(ListDsRelationProjectUsersRequest) returns (ListDsRelationProjectUsersResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsRelationProjectUsers"
    };
  }

  rpc GetDsRelationProjectUser(GetDsRelationProjectUserRequest) returns (DsRelationProjectUser) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsRelationProjectUsers/*}"
    };
  }

  rpc CreateDsRelationProjectUser(CreateDsRelationProjectUserRequest) returns (DsRelationProjectUser) {
    option (google.api.http) = {
      post: "/v1alpha1/DsRelationProjectUsers"
      body: "DsRelationProjectUser"
    };
  }

  rpc UpdateDsRelationProjectUser(UpdateDsRelationProjectUserRequest) returns (DsRelationProjectUser) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsRelationProjectUser.name=DsRelationProjectUsers/*}"
      body: "DsRelationProjectUser"
    };
  }

  rpc DeleteDsRelationProjectUser(DeleteDsRelationProjectUserRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsRelationProjectUsers/*}"
    };
  }
}

// message DsRelationProjectUser {
// ! This should be defined elsewhere
// }

message ListDsRelationProjectUsersRequest {


  // The maximum number of items to return.
  int32 page_size = 1;

 int32 page_num = 2;
}

message ListDsRelationProjectUsersResponse {
  // The field name should match the noun "DsRelationProjectUser" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsRelationProjectUser DsRelationProjectUsers = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDsRelationProjectUserRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsRelationProjectUserRequest {
  // The parent resource name where the DsRelationProjectUser is to be created.
  string parent = 1;

  // The DsRelationProjectUser id to use for this DsRelationProjectUser.
  string DsRelationProjectUser_id = 2;

  // The DsRelationProjectUser resource to create.
  // The field name should match the Noun in the method name.
  DsRelationProjectUser DsRelationProjectUser = 3;
}

message UpdateDsRelationProjectUserRequest {
  // The DsRelationProjectUser resource which replaces the resource on the server.
  DsRelationProjectUser DsRelationProjectUser = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsRelationProjectUserRequest {
  // The resource name of the DsRelationProjectUser to be deleted.
  string name = 1;
}
